--- a/css/template.css
+++ b/css/template.css
@@ -29,6 +29,7 @@ body{
 }
 
 .links{
+    display: block;
     color: black;
     text-decoration: none;
     width: auto;
@@ -51,13 +52,13 @@ body{
     color: #ffb700;
     width: 23%;
     margin-left: 1%;
-    margin-right: 1%;
+    margin-right: 1% !important;
 }
 
-#icon{
+#iconpc{
     font-size: 200%;
     display: block;
-    color: purple;
+    color: black;
     text-decoration: none;
     font-weight: bold;
     width: 27.5%;
@@ -65,6 +66,10 @@ body{
     text-align: center;
     margin-top: auto;
     margin-bottom: auto;
+}
+
+#iconpc:hover{
+    color: orange;
 }
 
 #mobileHeader, #mobileHeaderOpen{
@@ -90,7 +95,7 @@ body{
 
     display: block;
     text-align: center;
-    color: purple;
+    color: black;
     text-decoration: none;
     font-weight: bold;
     padding-top: 4%;
@@ -101,6 +106,7 @@ body{
 #bottom{
     background-color: orange;
     margin-top: 5%;
+  
     margin-bottom: -1%;
     padding-left: 10%;
     padding-right: 10%;
@@ -115,6 +121,8 @@ body{
     margin-top: 0;
     margin-bottom: 2.5%;
 }
+
+
 
 .bottomheaders{
 
@@ -187,3 +195,192 @@ body{
     margin-bottom: -1%;
 }
 
+@media only screen and (orientation: portrait){
+    #mobileHeaderOpen{
+        display: none;
+    }
+    
+    .mobileLinks{
+        display: none;
+    }
+    
+    #bottom{
+        margin-top: 12%;
+        padding-top: 0.5%;
+    }
+    #credit{
+        font-size: 85%;
+        background-color: lightgrey;
+        color: black;
+        font-family: 'Roboto', sans-serif;
+        margin-top: 3%;
+        text-align: center;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+    #bottomIcon{
+        margin-top: 5%;
+        margin-bottom: 5%;
+        text-align: center;
+        font-size: 8vw;
+    }
+
+    #bottomCaption{
+        font-size: 4vw;
+        text-align: center;
+        line-height: 1.4;
+        margin-bottom: 10%;
+    }
+
+    #footerflex{
+        flex-direction: column;
+    }
+
+    #left, #right{
+        width: 100%;
+    }
+
+    .topbottomheaders{
+        width: 50%;
+        padding-left: 3%;
+        font-size: 5.5vw;
+    }
+
+    #email, #sourcecode{
+        font-size: 4.5vw;
+    }
+
+    .bottomheaders{
+        width: 50%;
+        padding-left: 3%;
+        font-size: 5.5vw;
+    }
+
+    #bottomLinkHolder{
+        flex-direction: column;
+
+    }
+
+    .indivBottomLinkHolder{
+
+        color: white;
+        font-size: 4.25vw;
+        margin-top: 0.7%;
+        margin-bottom: 0.7%;
+        text-decoration: none;
+        margin-left: 0;
+    }
+
+    #credit{
+        margin-top: 0;
+        margin-bottom: -1%;
+    }
+
+    #mobileHeader{
+        display: block;
+        display: flex;
+ 
+        /*position: fixed;*/
+        position: sticky;
+        top: 0;
+        background-color: white;
+        margin-left: 0;
+        margin-right: 0;
+        width: 100%;
+        z-index: 3;
+
+        box-shadow: 5px 5px 10px #888888;
+    }
+
+    #topmostheader{
+        margin-top: -2.1%;
+        font-size: 4vw;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    #header{
+        display: none;
+    }
+
+    #menu{
+        font-size: 175%;
+        margin-left: 4%;
+       
+        margin-top: 0;
+        color: black;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        margin-top: 2%;
+        margin-bottom: 2%;
+        
+        transition: 0.7s;
+    }
+
+    #menu:hover{
+        
+        color: orange;
+        background-color:whitesmoke;
+        transition: 0.7s;
+        cursor: pointer;
+    }
+
+    #icon{
+        margin-top: auto;
+        margin-bottom: auto;
+        padding-left: 2%;
+        font-size: 6.5vw;
+        color: black;
+        font-weight: bold;
+        text-decoration: none;
+    }
+
+    #mobileHeaderOpen{
+        display: block;
+        background-color:  #ffb700;
+        box-sizing: border-box;
+
+        z-index: 2;
+        margin-left: -1%;
+  
+        width: 41%;
+        position: sticky;
+        top: 9%;
+    }
+
+    .mobileLinks{
+        font-size: 5vw;
+        display: block;
+        padding: 10%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+        color: white;
+        text-decoration: none;
+
+    }
+    .headerLinkHolder{
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+    .headerLinkHolder:hover{
+        background-color: purple;
+    }
+
+    .mobileLinks:hover{
+        text-decoration: underline;
+        font-weight: bold;
+    }
+
+    #mobileMenu{
+        font-size: 150%;
+        text-decoration: underline;
+        margin-top: 1%;
+        margin-bottom: 1%;
+        padding-left: 5%;
+        padding-bottom: 1%;
+        border-bottom: none;
+    }
+}
